[package]
name = "spire-map-gui"
version = "0.2.0"
authors = ["Emil Lundberg <emil@emlun.se>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
serde = { version = "^1.0.130", features = ["derive"] }
serde_json = "^1.0.68"
sts_map_oracle = { git = "https://github.com/Ru5ty0ne/sts_map_oracle.git", rev = "fd962e163ab7731856607c70bb4c6d47cec8ff1b" }
wasm-bindgen = "^0.2.78"
web-sys = {version = "^0.3.55", features = ["console"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "^0.1.7", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "^0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "^0.3.28"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
